--- a/CameraControllerApi/webif/index.html
+++ b/CameraControllerApi/webif/index.html
@@ -1,31 +1,197 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Ember Starter Kit</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <title>CameraControllerApi - Webif</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <style>
+        body {
+            padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+        }
+    </style>
+    <link href="css/bootstrap.min.css" rel="stylesheet">    
+    <link href="css/slider.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
+
 <body>
+<div class="container"> 
+    <div id="loader"></div>   
+    <div class="alert" id="status"></div>
+    <div id="navi"></div>
+    <div id="content">
 
-  <script type="text/x-handlebars">
-    <h2>Welcome to Ember.js</h2>
+    </div>    
+    <div class="" id="dialog"></div>
+</div>
 
-    {{outlet}}
-  </script>
 
-  <script type="text/x-handlebars" data-template-name="index">
-    <ul>
-    {{#each item in model}}
-      <li>{{item}}</li>
-    {{/each}}
-    </ul>
-  </script>
+<script type="text/template" id="navigation_template">
+    <nav class="navbar navbar-default navbar-static-top" role="navigation">
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/control"><span class="glyphicon glyphicon-camera"></span> Control</a></li>
+                <li><a href="/gallery"><span class="glyphicon glyphicon-picture"></span> Gallery</a></li>
+                <li><a href="/info"><span class="glyphicon glyphicon-info-sign"></span> Info</a></li>
+            </ul>
+        </div>
+    </nav>
+</script>
 
-  <script src="js/libs/jquery-1.9.1.js"></script>
-  <script src="js/libs/handlebars-1.0.0.js"></script>
-  <script src="js/libs/ember-1.0.0.js"></script>
-  <script src="js/app.js"></script>
+<script type="text/template" id="control_template">
+    <img class="image" id="result_image" src="img/pic.jpg" />
+    <button id="show-control" class="btn btn-show-controlls ">
+        <span class="glyphicon glyphicon-chevron-down"></span>
+    </button>
+    <div class="span6" style="text-align:center" id="controls">        
+        <h1>control your dslr</h1>
+        <button id="shot" class="btn btn-ultra" data-toggle="tooltip" title="first tooltip">
+            <span class="glyphicon glyphicon-camera"></span>
+        </button>    
+        <button id="show" class="btn btn-ultra" data-toggle="tooltip" title="first tooltip">
+            <span class="glyphicon glyphicon-search"></span>
+        </button>        
+        <button id="settings" class="btn btn-ultra" data-toggle="tooltip" title="first tooltip">
+            <span class="glyphicon glyphicon-wrench"></span>
+        </button>        
+    </div>
+    <div id="settings-panel" class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">Settings</h3>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="aperture" class="control-label">Aperture</label>
+                        <select class="form-control" id="aperture" name="aperture" placeholder=""></select>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="shutterspeed" class="control-label">Shutter speed</label>
+                        <select class="form-control" id="shutterspeed" name="speed" placeholder=""></select>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="iso" class="control-label">ISO</label>
+                        <select class="form-control" name="iso" id="iso" placeholder=""></select>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="whitebalance" class="control-label">Whitebalance</label>
+                        <select class="form-control" id="whitebalance" name="whitebalance" placeholder=""></select>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
+
+<script type="text/template" id="gallery_template">
+    <div style="text-align:center">
+        <h1>watch your images on the dslr</h1>     
+        <div id="images"></div>   
+    </div>
+</script>
+
+<script type="text/template" id="editbox_template">
+  <!-- Modal -->
+  <div class="modal fade fullscreen" id="editbox" tabindex="-1" role="dialog" aria-labelledby="edit-box" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">       
+        <div class="modal-body">
+            <div class="image-container"></div>
+            <div class="sidebar">                
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        brightness 
+                        <span class="pull-right">
+                            <input type="text" class="slider" id="slider-brightness" value="0" data-mode="brightness" data-slider-min="-100" data-slider-max="100" data-slider-step="1" />
+                        </span>
+                    </li>                    
+                    <li class="list-group-item">
+                        saturation 
+                        <span class="pull-right">
+                            <input type="text" class="slider" id="slider-saturation" value="0" data-mode="saturation" data-slider-min="-100" data-slider-max="100" data-slider-step="1" />
+                        </span>
+                    </li>
+                    <li class="list-group-item">
+                        exposure 
+                        <span class="pull-right">
+                            <input type="text" class="slider" id="slider-exposure" value="" data-mode="exposure" data-slider-min="-100" data-slider-max="100" data-slider-step="1" />
+                        </span>
+                    </li>
+                    <li class="list-group-item">
+                        contrast 
+                        <span class="pull-right">
+                            <input type="text" class="slider" id="slider-contrast" value="" data-mode="contrast" data-slider-min="-100" data-slider-max="100" data-slider-step="1" />
+                        </span>
+                    </li>
+                    <li class="list-group-item">
+                        vibrance 
+                        <span class="pull-right">
+                            <input type="text" class="slider" id="slider-vibrance" value="" data-mode="vibrance" data-slider-min="-100" data-slider-max="100" data-slider-step="1" />
+                        </span>
+                    </li>
+                    <li class="list-group-item">
+                        hue 
+                        <span class="pull-right">
+                            <input type="text" class="slider" id="slider-hue" value="" data-mode="hue" data-slider-min="0" data-slider-max="100" data-slider-step="1" />
+                        </span>
+                    </li>                   
+                  </ul>
+            </div>
+            <div class="clearfix"></div>            
+        </div>   
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default save">
+                <span class="glyphicon glyphicon-floppy-saved"></span> Save
+            </button>
+            <button type="button" class="btn btn-default exit">
+                <span class="glyphicon glyphicon-off"></span> Close
+            </button>
+        </div>     
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+</script>
+
+<script type="text/template" id="info_template">
+    <div style="text-align:center">
+        <h1>what is this here</h1>        
+    </div>
+    <div class="col-xs-6">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h2>smal information</h2>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-6">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h2>some short informations</h2>                
+            </div>
+        </div>
+    </div>
+</script>
+
+
+<script src="lib/jquery.min.js"></script>
+<script src="lib/jquery.easing.1.3.js"></script>
+<script src="lib/bootstrap.min.js"></script>
+<script src="lib/bootstrap-slider.js"></script>
+<script src="lib/underscore-min.js"></script>
+<script src="lib/backbone-min.js"></script>
+<script src="lib/caman.full.min.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
